--- a/website.html
+++ b/website.html
@@ -267,46 +267,41 @@
     </p>
   </div>
 
-  <!-- CTMF 1: Framing Requirements with NSPIRE -->
-<div class="section-container fade-section">
-  <h2>CTMF 1: Framing Requirements with NSPIRE</h2>
-  <p>
-    Integrating the NSPIRE safety standard (Figure 1) into our project requirements enhanced my understanding of the engineering design process by emphasizing the importance of user safety and functionality. NSPIRE requires that designs minimize sharp edges and puncture risks to protect users, particularly in public spaces. We used this as a basis to frame a requirement against sharp corners or exposed mechanical elements. This led to design solutions with rounded profiles, soft enclosures, and protective casings. The NSPIRE framework became a functional constraint and a design guide that helped us iterate on safer, more user-aware alternatives.
-  </p>
-  <p>
-    By applying NSPIRE, I saw how safety standards aren’t just bureaucratic hurdles — they actively influence the design’s success. The reference to glide designs (Figure 1, right) clarified this: subtle changes in shape, angle, or material could be the difference between safe and unsafe outcomes. Integrating NSPIRE early helped us avoid reworking safety later.
-  </p>
-  <p>
-    Some might argue this limits creativity, but in our case, it elevated the creativity. It pushed us to consider novel enclosures, alternate materials, and modular add-ons. In retrospect, using NSPIRE made our design more robust, and more responsible.
-  </p>
-  <figure style="text-align: center; margin-top: 2rem;">
-    <img src="Safety.png" alt="NSPIRE Standard" style="max-width: 100%; border-radius: 1rem;" />
-    <figcaption style="margin-top: 0.5rem; font-size: 1rem;">
-      <strong>Figure 1.</strong> NSPIRE criteria for puncture and sharp edge hazards; the glide design informed safe part selection.
-    </figcaption>
-  </figure>
-</div>
+  <div class="section-container fade-section">
+    <h2>CTMF 1 – Framing with NSPIRE Safety Standards</h2>
+    <p>
+      Integrating the NSPIRE safety standard (<strong>Figure 1</strong>) during the <em>framing</em> stage of our engineering design process helped me recognize how technical guidelines enhance both user safety and design credibility. NSPIRE defines hazards like sharp edges and puncture risks that may endanger users—especially in shared or institutional spaces. These criteria became foundational in how we structured our requirements, particularly by explicitly stating that no sharp corners or exposed structural elements could be present in the final product. This helped reframe our understanding of what makes a solution "complete"—not just functionally effective, but safe and inclusive.
+    </p>
+    <p>
+      Throughout <em>divergence</em>, NSPIRE helped us filter our brainstorming: we removed or reworked ideas that might violate its constraints. When <em>converging</em>, it became an evaluation lens, pushing us toward designs with enclosed geometries, rounded forms, and smooth external contours. In the <em>representation</em> phase, NSPIRE served as a justification tool—we used references like compliant glides (<strong>Figure 2</strong>) to defend our decisions to both peers and instructors. Ultimately, it allowed us to validate our prototype with confidence that it aligned with real-world benchmarks.
+    </p>
+    <p>
+      Initially, I viewed standards as limitations—external impositions that restricted creative freedom. But applying NSPIRE early taught me that standards can instead anchor creativity in meaningful purpose. Rather than curbing our innovation, they enhanced it by creating clarity and intent. One challenge we faced was that interpreting general language (e.g., “sharp edge”) required contextual judgment, which took iteration and peer feedback to resolve. Still, NSPIRE proved to be a powerful CTMF, shifting our focus from "how can we solve this problem?" to "how can we solve it <em>safely</em> and <em>responsibly</em>?"
+    </p>
+    <div class="image-row">
+      <img src="nspire.png" alt="Figure 1: NSPIRE Safety Standard Document" />
+      <img src="glide.png" alt="Figure 2: Compliant Chair Glide" />
+    </div>
+  </div>
 
-<!-- CTMF 2: Diverging with the Lotus Method -->
-<div class="section-container fade-section">
-  <h2>CTMF 2: Diverging with the Lotus Method</h2>
-  <p>
-    Utilizing the Lotus Blossom method (Figure 2) as a team helped expand my approach to engineering design. This CTMF taught me the value of open-minded collaboration. Instead of jumping to conclusions or leaning on personal ideas, we split our design challenge — stabilizing chairs — into focused areas: attachment, adjustability, resistance, portability, and more.
-  </p>
-  <p>
-    The structure encouraged everyone to pitch in across categories. We explored ideas like telescoping rubber pads, spring-loaded platforms, magnetic locks, and anti-vibration mats. These concepts would not have come up in a less structured discussion. The method gave our brainstorming breadth and direction, improving both the diversity and depth of our ideas.
-  </p>
-  <p>
-    Critics may say that diverging as a group slows things down or becomes overwhelming. But the Lotus format provided enough focus to keep us grounded. This CTMF taught me that divergence isn’t about volume of ideas alone — it’s about strategic exploration with others. The result was a more robust idea pool that helped shape a clearer, more complete design brief.
-  </p>
-  <figure style="text-align: center; margin-top: 2rem;">
-    <img src="lotus.png" alt="Lotus Blossom Ideation" style="max-width: 100%; border-radius: 1rem;" />
-    <figcaption style="margin-top: 0.5rem; font-size: 1rem;">
-      <strong>Figure 2.</strong> Team-generated Lotus Blossom ideation matrix; categories included structure, locking mechanisms, and modularity.
-    </figcaption>
-  </figure>
-</div>
-
+  <div class="section-container fade-section">
+    <h2>CTMF 2 – Diverging with the Lotus Blossom Method</h2>
+    <p>
+      During our <em>divergence</em> phase, we used the Lotus Blossom method (<strong>Figure 3</strong>) to expand a core problem—stabilizing wobbly chairs—into eight broad categories of functionality, such as adjustability, material, footprint, and modularity. For each category, we generated specific concepts, like foldable platforms, magnetic locks, or rubber traction pads. This process unlocked idea generation that might otherwise have remained dormant, especially since it encouraged team members to work on different branches simultaneously, reducing groupthink and bottlenecks.
+    </p>
+    <p>
+      The Lotus method also supported <em>framing</em> by showing us which design considerations we were overlooking. Categories like “Resisting the Load” or “Universal Compatibility” became new requirement areas in our updated design brief. During <em>convergence</em>, the visual structure of the Lotus board helped us identify overlapping concepts, such as “minimalist” designs that also reduced sharp edges, strengthening both safety and user experience. As we moved into <em>representation</em>, we used the filled-in board as a deliverable to explain our creative process to instructors and clients.
+    </p>
+    <p>
+      Critics may argue that group ideation models like Lotus can lead to idea overload or disjointed thinking. However, our team’s structured facilitation—timeboxing categories and building off each other's ideas—transformed the tool into a platform for real synergy. We created far more well-rounded, diverse options than we could have as individuals. In fact, some of our most promising concepts (like the detachable air-based platform) were the result of combining insights across different petals of the Lotus model.
+    </p>
+    <p>
+      Ultimately, this CTMF proved that design is not just about generating a solution, but building an ecosystem of possibilities. The Lotus method helped us balance depth with breadth, and it turned our divergence into a creative yet strategic process.
+    </p>
+    <div class="image-row">
+      <img src="lotus.png" alt="Figure 3: Lotus Blossom Ideation Board" />
+    </div>
+  </div>
   <div class="section-container fade-section">
     <h2>CTMF 3</h2>
     <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
