--- a/website.html
+++ b/website.html
@@ -259,49 +259,108 @@
   </div>
 
   <div id="praxis1" class="tab-content">
-
   <div class="section-container fade-section">
-    <h2>Praxis I Design Summary: The Splartz</h2>
     <p>
-      The Splartz is a dynamic air pump platform created to address the common issue of chair wobble in university study environments. Designed for square-legged chairs, it automatically adjusts to differences in leg height using internal elastic air pockets, thereby enhancing user comfort and focus without requiring permanent installation. The platform can support up to 150 kg and correct unevenness ranging from 1.25 mm to 12 mm, achieving a 98% correction rate during testing. Its compact size and adaptability allow for easy deployment across campus study spaces, promoting stability, user safety, and a more inclusive seating experience for all students.
+      The <strong>Splartz</strong> is a dynamic chair-stabilization platform developed to eliminate wobbling caused by uneven leg lengths in study environments. Designed specifically for square-legged chairs, the device utilizes an internal elastic air chamber that adjusts to user weight, providing automatic compensation for leg height discrepancies between 1.25 mm and 12 mm. With a compact form and a 150 kg capacity, Splartz supports both functionality and portability. The team applied structured decision-making tools (e.g., Pugh charts, measurement matrices) to evaluate design alternatives, ultimately selecting the air-pump concept for its adaptability, simplicity, and alignment with safety standards. Key design enhancements include reduced platform height for stability, a square base for chair compatibility, and a gyroid infill structure that offers near-isotropic strength while minimizing material use. The final prototype achieved a 98% correction accuracy rate in testing, reflecting the team’s emphasis on user comfort, safety, and real-world applicability.
     </p>
-  </div>
-
-  <div class="section-container fade-section">
-    <h2>CTMF 1 – Framing with NSPIRE Safety Standards</h2>
-    <p>
-      Integrating the NSPIRE safety standard (<strong>Figure 1</strong>) during the <em>framing</em> stage of our engineering design process helped me recognize how technical guidelines enhance both user safety and design credibility. NSPIRE defines hazards like sharp edges and puncture risks that may endanger users—especially in shared or institutional spaces. These criteria became foundational in how we structured our requirements, particularly by explicitly stating that no sharp corners or exposed structural elements could be present in the final product. This helped reframe our understanding of what makes a solution "complete"—not just functionally effective, but safe and inclusive.
-    </p>
-    <p>
-      Throughout <em>divergence</em>, NSPIRE helped us filter our brainstorming: we removed or reworked ideas that might violate its constraints. When <em>converging</em>, it became an evaluation lens, pushing us toward designs with enclosed geometries, rounded forms, and smooth external contours. In the <em>representation</em> phase, NSPIRE served as a justification tool—we used references like compliant glides (<strong>Figure 2</strong>) to defend our decisions to both peers and instructors. Ultimately, it allowed us to validate our prototype with confidence that it aligned with real-world benchmarks.
-    </p>
-    <p>
-      Initially, I viewed standards as limitations—external impositions that restricted creative freedom. But applying NSPIRE early taught me that standards can instead anchor creativity in meaningful purpose. Rather than curbing our innovation, they enhanced it by creating clarity and intent. One challenge we faced was that interpreting general language (e.g., “sharp edge”) required contextual judgment, which took iteration and peer feedback to resolve. Still, NSPIRE proved to be a powerful CTMF, shifting our focus from "how can we solve this problem?" to "how can we solve it <em>safely</em> and <em>responsibly</em>?"
-    </p>
+    
     <div class="image-row">
-      <img src="nspire.png" alt="Figure 1: NSPIRE Safety Standard Document" />
-      <img src="glide.png" alt="Figure 2: Compliant Chair Glide" />
+      <img src="Praxis1Pager1.png" alt="Praxis 1 Page 1" />
+      <img src="Praxis1Pager2.png" alt="Praxis 1 Page 2" />
     </div>
+</div>
+
+  <div class="section-container fade-section">
+  <h2>CTMF 1: Using Standards to Frame Requirements</h2>
+
+  <p>
+    Integrating the <strong>NSPIRE safety standard</strong> (Figure 1) into our project requirements significantly enhanced my understanding of the engineering design process by foregrounding user safety and functionality. NSPIRE emphasizes the need to eliminate sharp edges and puncture risks, particularly in public environments, to prevent user harm and maintain durability of personal belongings.
+  </p>
+
+  <figure style="text-align: center;">
+  <img src="Safety.png" alt="Figure 1 - NSPIRE Safety Standards" style="max-width: 100%; height: auto;" />
+  <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 1 – NSPIRE Safety Standard used to reframe requirements to adhere to safety</figcaption>
+</figure>
+
+
+  <p>
+    By referencing NSPIRE, we created explicit requirements to avoid exposed edges or protrusions that could pose hazards. This led to design choices that featured <strong>rounded corners</strong>, <strong>enclosed components</strong>, and the use of <strong>impact-safe materials</strong>. What initially seemed like a constraint evolved into a design catalyst — enabling safer, more refined, and ultimately more user-friendly prototypes.
+  </p>
+
+  <p>
+    This process helped me understand that engineering design extends beyond pure functionality. It is inherently about <strong>mitigating risk</strong>, protecting the user, and anticipating failure scenarios. I had previously viewed safety standards as an afterthought or a box to check off — but through our application of NSPIRE, I began to see standards as strategic design tools that elevate both performance and user experience.
+  </p>
+
+  <figure style="text-align: center;">
+  <img src="gilde.png" alt="Figure 2 - Glide Reference" style="max-width: 100%; height: auto;" />
+  <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 2 – Glide design with rounded, NSPIRE-compliant edges</figcaption>
+  </figure>
+
+
+  <p>
+    For example, our analysis of commercially available glides (Figure 2) demonstrated how even everyday components embody NSPIRE principles through soft edges and recessed fasteners. Seeing this principle in action solidified my understanding that safety standards shape real-world design decisions.
+  </p>
+
+  <p>
+    Some may argue that strict standards stifle creativity. On the contrary, I found that NSPIRE guided us to think more critically and creatively, pushing us to devise <strong>innovative solutions that didn’t compromise safety</strong>. In the end, aligning with the NSPIRE framework helped our team build designs that were more resilient, intuitive, and ethically responsible — deepening my understanding of the "framing" phase in the engineering design process.
+  </p>
+</div>
+
+
+  <div class="section-container fade-section">
+  <h2>CTMF 2: Diverging with the Lotus Method</h2>
+
+  <p>
+    Utilizing the <strong>Lotus method</strong> (Figure 3) as a team enhanced my understanding of engineering design, particularly the value of structured, open-minded collaboration during idea generation. The Lotus technique encourages expansive thinking by breaking down a central challenge into eight sub-categories and generating multiple solutions within each one. In our case, this method helped us brainstorm features for a chair-stabilization device, leading to ideas focused on adjustable length, material compatibility, portability, and user safety.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="lotus.png" alt="Lotus Method Ideation Grid" style="max-width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);" />
+    <figcaption style="margin-top: 0.75rem; font-size: 0.95rem; color: #555;">
+      <strong>Figure 3:</strong> Lotus Method ideation grid used to diverge solutions across functional categories.
+    </figcaption>
+  </figure>
+
+  <p>
+    Working through the Lotus method as a team, we identified solutions like <strong>telescoping mechanisms</strong> for adjustable length and <strong>anti-slip base pads</strong> to improve surface grip — each inspired by different functional requirements. This structure pushed us to analyze the problem from multiple angles and think beyond initial assumptions. It wasn’t just about quantity; the process also encouraged us to build on each other’s ideas and refine them in real time.
+  </p>
+
+  <p>
+    More importantly, the collaborative nature of the method revealed how <strong>divergent thinking</strong> within a team fosters innovation. Each member brought their unique perspective, which helped me appreciate ideas I wouldn’t have considered on my own. For example, someone on the team suggested using <em>rotational platforms</em> to allow chair legs to adapt to uneven floors — an idea that wouldn't have come from my own line of thought. This highlighted that engineering design isn’t a solo pursuit; it’s a collective process of shared creativity.
+  </p>
+
+  <p>
+    One concern with group ideation is the potential for misalignment or inefficiency. However, the <strong>Lotus method provided just enough structure</strong> to channel our brainstorming in a focused, productive way. It helped us avoid common pitfalls like redundancy or off-topic tangents by rooting all discussions in a clearly defined category set. The result was a broad and balanced list of requirements and features that fed directly into our design brief.
+  </p>
+
+  <p>
+    This process deepened my understanding of the <strong>divergence phase</strong> in the engineering design process. It showed me that open-minded, collaborative brainstorming isn't chaotic — it's essential. The Lotus method helped transform scattered ideas into a strategic foundation for our project, reinforcing that the best solutions often come from a wide spectrum of voices, not just one mind.
+  </p>
+</div>
+
+
+  <div class="section-container fade-section">
+    <h2>CTMF 3</h2>
+    <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
+  </div>
+</div>
+
+  <div id="civ102" class="tab-content">
+  <div class="section-container fade-section">
+    <h2>One Pager</h2>
+    <p>Brief overview of your Praxis I project’s vision and goals in a concise one-pager format.</p>
   </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 2 – Diverging with the Lotus Blossom Method</h2>
-    <p>
-      During our <em>divergence</em> phase, we used the Lotus Blossom method (<strong>Figure 3</strong>) to expand a core problem—stabilizing wobbly chairs—into eight broad categories of functionality, such as adjustability, material, footprint, and modularity. For each category, we generated specific concepts, like foldable platforms, magnetic locks, or rubber traction pads. This process unlocked idea generation that might otherwise have remained dormant, especially since it encouraged team members to work on different branches simultaneously, reducing groupthink and bottlenecks.
-    </p>
-    <p>
-      The Lotus method also supported <em>framing</em> by showing us which design considerations we were overlooking. Categories like “Resisting the Load” or “Universal Compatibility” became new requirement areas in our updated design brief. During <em>convergence</em>, the visual structure of the Lotus board helped us identify overlapping concepts, such as “minimalist” designs that also reduced sharp edges, strengthening both safety and user experience. As we moved into <em>representation</em>, we used the filled-in board as a deliverable to explain our creative process to instructors and clients.
-    </p>
-    <p>
-      Critics may argue that group ideation models like Lotus can lead to idea overload or disjointed thinking. However, our team’s structured facilitation—timeboxing categories and building off each other's ideas—transformed the tool into a platform for real synergy. We created far more well-rounded, diverse options than we could have as individuals. In fact, some of our most promising concepts (like the detachable air-based platform) were the result of combining insights across different petals of the Lotus model.
-    </p>
-    <p>
-      Ultimately, this CTMF proved that design is not just about generating a solution, but building an ecosystem of possibilities. The Lotus method helped us balance depth with breadth, and it turned our divergence into a creative yet strategic process.
-    </p>
-    <div class="image-row">
-      <img src="lotus.png" alt="Figure 3: Lotus Blossom Ideation Board" />
-    </div>
+    <h2>CTMF 1</h2>
+    <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
   </div>
+
+  <div class="section-container fade-section">
+    <h2>CTMF 2</h2>
+    <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
+  </div>
+
   <div class="section-container fade-section">
     <h2>CTMF 3</h2>
     <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
