--- a/website.html
+++ b/website.html
@@ -274,44 +274,45 @@
   <h2>CTMF 1: Using Standards to Frame Requirements</h2>
 
   <p>
-    Integrating the <strong>NSPIRE safety standard</strong> (Figure 1) into our project requirements significantly enhanced my understanding of the engineering design process by foregrounding user safety and functionality. NSPIRE emphasizes the need to eliminate sharp edges and puncture risks, particularly in public environments, to prevent user harm and maintain durability of personal belongings.
+    Integrating the <strong>NSPIRE safety standard</strong> (Figure 1) into our design process deepened my understanding of the <strong>framing phase</strong> of engineering. Framing involves defining what matters in a design — the problem, the goals, and the constraints. Initially, I thought of our project mainly in terms of stability and function. However, when we applied NSPIRE, our framing shifted: user safety became a priority. This required us to go beyond aesthetics and functionality to ensure we were addressing real-world risks like sharp edges and potential injuries.
   </p>
 
   <figure style="text-align: center;">
-  <img src="Safety.png" alt="Figure 1 - NSPIRE Safety Standards" style="max-width: 100%; height: auto;" />
-  <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 1 – NSPIRE Safety Standard used to reframe requirements to adhere to safety</figcaption>
-</figure>
-
-
-  <p>
-    By referencing NSPIRE, we created explicit requirements to avoid exposed edges or protrusions that could pose hazards. This led to design choices that featured <strong>rounded corners</strong>, <strong>enclosed components</strong>, and the use of <strong>impact-safe materials</strong>. What initially seemed like a constraint evolved into a design catalyst — enabling safer, more refined, and ultimately more user-friendly prototypes.
-  </p>
-
-  <p>
-    This process helped me understand that engineering design extends beyond pure functionality. It is inherently about <strong>mitigating risk</strong>, protecting the user, and anticipating failure scenarios. I had previously viewed safety standards as an afterthought or a box to check off — but through our application of NSPIRE, I began to see standards as strategic design tools that elevate both performance and user experience.
-  </p>
-
-  <figure style="text-align: center;">
-  <img src="gilde.png" alt="Figure 2 - Glide Reference" style="max-width: 100%; height: auto;" />
-  <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 2 – Glide design with rounded, NSPIRE-compliant edges</figcaption>
+    <img src="Safety.png" alt="Figure 1 - NSPIRE Safety Standards" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      Figure 1 – NSPIRE Safety Standard used to reframe requirements to adhere to safety
+    </figcaption>
   </figure>
 
-
   <p>
-    For example, our analysis of commercially available glides (Figure 2) demonstrated how even everyday components embody NSPIRE principles through soft edges and recessed fasteners. Seeing this principle in action solidified my understanding that safety standards shape real-world design decisions.
+    With this new framing, we created specific requirements: no exposed screws, no sharp corners, and all structural elements must be either enclosed or cushioned. These constraints forced us to rethink what “good design” meant — not just something that works, but something that protects. The safety requirement influenced every design decision from that point forward, guiding both our material choices and structural layouts.
   </p>
 
   <p>
-    Some may argue that strict standards stifle creativity. On the contrary, I found that NSPIRE guided us to think more critically and creatively, pushing us to devise <strong>innovative solutions that didn’t compromise safety</strong>. In the end, aligning with the NSPIRE framework helped our team build designs that were more resilient, intuitive, and ethically responsible — deepening my understanding of the "framing" phase in the engineering design process.
+    At first, I saw safety standards as a checklist item — something to deal with later. But framing our design around NSPIRE early on showed me how powerful these standards are in shaping initial thinking. They don’t just filter out bad ideas; they elevate the design by giving it purpose. We weren’t just building something functional — we were building something that met a professional expectation of responsibility.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="gilde.png" alt="Figure 2 - Glide Reference" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      Figure 2 – Glide design with rounded, NSPIRE-compliant edges
+    </figcaption>
+  </figure>
+
+  <p>
+    Looking at existing glide designs (Figure 2), I saw how NSPIRE was applied in industry through subtle choices like rounded plastic, embedded fasteners, and covered metal ends. These examples helped me reframe our design more realistically. Rather than being restrictive, the safety framing gave our team a professional lens that connected our project to real engineering practice.
+  </p>
+
+  <p>
+    Overall, this experience showed me that <strong>framing isn’t just about narrowing down a problem — it’s about deciding what values to prioritize</strong>. Applying the NSPIRE standard reframed our entire outlook, helping us balance performance with user-centered design from the very beginning.
   </p>
 </div>
-
 
   <div class="section-container fade-section">
   <h2>CTMF 2: Diverging with the Lotus Method</h2>
 
   <p>
-    Utilizing the <strong>Lotus method</strong> (Figure 3) as a team enhanced my understanding of engineering design, particularly the value of structured, open-minded collaboration during idea generation. The Lotus technique encourages expansive thinking by breaking down a central challenge into eight sub-categories and generating multiple solutions within each one. In our case, this method helped us brainstorm features for a chair-stabilization device, leading to ideas focused on adjustable length, material compatibility, portability, and user safety.
+    Using the <strong>Lotus method</strong> (Figure 3) fundamentally shaped how I approach the <strong>divergence phase</strong> of engineering design. Divergence involves purposefully generating a wide range of ideas before evaluating or narrowing them down. Before this project, I often jumped to early conclusions and settled quickly on a “best” idea. However, the structured format of the Lotus method challenged me to slow down and fully explore the design space.
   </p>
 
   <figure style="text-align: center;">
@@ -322,19 +323,19 @@
   </figure>
 
   <p>
-    Working through the Lotus method as a team, we identified solutions like <strong>telescoping mechanisms</strong> for adjustable length and <strong>anti-slip base pads</strong> to improve surface grip — each inspired by different functional requirements. This structure pushed us to analyze the problem from multiple angles and think beyond initial assumptions. It wasn’t just about quantity; the process also encouraged us to build on each other’s ideas and refine them in real time.
+    The method breaks down a central challenge into eight sub-problems and requires at least eight ideas per category. This forced our team to think deeply and broadly about the various aspects of our chair stabilizer, such as how to address load resistance, user ergonomics, ease of setup, and material performance. Generating over 60 unique ideas made me realize just how many possibilities can emerge when the goal is <strong>quantity over evaluation</strong>.
   </p>
 
   <p>
-    More importantly, the collaborative nature of the method revealed how <strong>divergent thinking</strong> within a team fosters innovation. Each member brought their unique perspective, which helped me appreciate ideas I wouldn’t have considered on my own. For example, someone on the team suggested using <em>rotational platforms</em> to allow chair legs to adapt to uneven floors — an idea that wouldn't have come from my own line of thought. This highlighted that engineering design isn’t a solo pursuit; it’s a collective process of shared creativity.
+    One insight I gained from this method was that divergent thinking is not random — it thrives on structure. Instead of loosely brainstorming, the Lotus grid kept us anchored in specific themes. For example, under the “adjustability” category, we proposed spring-loaded arms, telescoping legs, and modular inserts. Each of these had different benefits, and none of them would have come to mind if we hadn't purposefully stretched our thinking through the framework.
   </p>
 
   <p>
-    One concern with group ideation is the potential for misalignment or inefficiency. However, the <strong>Lotus method provided just enough structure</strong> to channel our brainstorming in a focused, productive way. It helped us avoid common pitfalls like redundancy or off-topic tangents by rooting all discussions in a clearly defined category set. The result was a broad and balanced list of requirements and features that fed directly into our design brief.
+    Another major learning was how collaboration expands divergence. The team setting meant each member offered ideas I wouldn't have generated alone — like a folding mechanism for portability or vibration-absorbing rubber composites for uneven ground. I learned that <strong>divergence works best when multiple perspectives are layered and built upon</strong>. Everyone’s contributions unlocked new sub-ideas, making the grid richer with each pass.
   </p>
 
   <p>
-    This process deepened my understanding of the <strong>divergence phase</strong> in the engineering design process. It showed me that open-minded, collaborative brainstorming isn't chaotic — it's essential. The Lotus method helped transform scattered ideas into a strategic foundation for our project, reinforcing that the best solutions often come from a wide spectrum of voices, not just one mind.
+    Prior to this, I thought of brainstorming as a quick, optional step. But using the Lotus method made divergence feel intentional, rigorous, and necessary. It prevented us from fixating on our first idea and pushed us to find better, more creative options. This experience helped me understand that <strong>divergence isn’t a warm-up — it’s a core engineering skill</strong> that leads to better design by ensuring we’ve explored enough to make informed decisions later.
   </p>
 </div>
 
