--- a/website.html
+++ b/website.html
@@ -304,7 +304,7 @@
   </p>
 
   <p>
-    Overall, this experience showed me that <strong>framing isn’t just about narrowing down a problem — it’s about deciding what values to prioritize</strong>. Applying the NSPIRE standard reframed our entire outlook, helping us balance performance with user-centered design from the very beginning.
+    Overall, this experience showed me that <strong>framing isn’t just about narrowing down a problem — it’s about deciding what values to prioritize</strong>. Applying the NSPIRE standard reframed our entire outlook, helping us balance performance with user-centered design from the very beginning. Framing our project through the lens of the NSPIRE standard proved highly effective in shaping a clear, user-centered foundation that guided every design decision with purpose and responsibility.
   </p>
 </div>
 
@@ -335,7 +335,7 @@
   </p>
 
   <p>
-    Prior to this, I thought of brainstorming as a quick, optional step. But using the Lotus method made divergence feel intentional, rigorous, and necessary. It prevented us from fixating on our first idea and pushed us to find better, more creative options. This experience helped me understand that <strong>divergence isn’t a warm-up — it’s a core engineering skill</strong> that leads to better design by ensuring we’ve explored enough to make informed decisions later.
+    Prior to this, I thought of brainstorming as a quick, optional step. But using the Lotus method made divergence feel intentional, rigorous, and necessary. It prevented us from fixating on our first idea and pushed us to find better, more creative options. This experience helped me understand that <strong>divergence isn’t a warm-up — it’s a core engineering skill</strong> that leads to better design by ensuring we’ve explored enough to make informed decisions later. The Lotus method was extremely effective in helping our team diverge thoughtfully and creatively, resulting in a broad, well-organized pool of ideas that laid the groundwork for strong and innovative design solutions.
   </p>
 </div>
 
