--- a/website.html
+++ b/website.html
@@ -363,9 +363,41 @@
   </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 3</h2>
-    <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
-  </div>
+  <h2>CTMF 3: Converging with a Measurement Matrix</h2>
+
+  <p>
+    To make a reasoned and evidence-based design decision, our team employed a <strong>Measurement Matrix</strong> (Figure 4) as a convergence tool to compare the performance of each of our prototypes. This matrix was structured around six framing criteria that aligned directly with our project’s user needs and safety requirements — including weight support, risk of hazard, durability, and correction effectiveness. By doing this, we ensured the convergence process was not just a subjective selection but rather grounded in rigorous evaluation.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="matrix.png" alt="Figure 4 - Measurement Matrix for Convergence" style="max-width: 100%; height: auto; border-radius: 1rem; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);" />
+    <figcaption style="margin-top: 0.75rem; font-size: 0.95rem; color: #555;">
+      <strong>Figure 4:</strong> Measurement matrix used to compare prototypes against critical requirements.
+    </figcaption>
+  </figure>
+
+  <p>
+    The strength of this tool lies in its ability to <strong>integrate the framing and convergence phases</strong> of the design process. The framing phase was critical to this CTMF’s success: we defined a clear set of criteria rooted in stakeholder needs and real-world constraints, such as NSPIRE safety compliance (no sharp edges), load-bearing performance (150+ kg), and portability. This front-end framing ensured the convergence process would be anchored to meaningful metrics rather than arbitrary preferences.
+  </p>
+
+  <p>
+    Through this matrix, we identified the <strong>Air Pump Platform</strong> as the optimal solution, which performed best across five out of six criteria. It provided high discrepancy correction (98%), the highest weight capacity (180 kg), full portability, and hazard-free edges. The Water-Filled Platform ranked closely behind, but was bulkier and risked maintenance issues. This comparative clarity would have been difficult to achieve without a structured convergence tool.
+  </p>
+
+  <p>
+    Moreover, the matrix allowed us to <strong>visually represent complex tradeoffs</strong> and communicate our rationale clearly to stakeholders, including our instructors and peers. Instead of simply declaring a design winner, we could justify our choice through empirical performance, which increased confidence in our decision and aligned our direction with our initial problem framing.
+  </p>
+
+  <p>
+    Some may critique the Measurement Matrix as overly rigid or susceptible to bias in how criteria are weighted or interpreted. However, in our context, it created clarity and alignment. Because our framing process was well-developed and criteria were stakeholder-driven, the matrix served as a transparent and highly effective tool for convergence. It encouraged rational thinking, reduced group conflict, and brought structure to a process that could otherwise be subjective.
+  </p>
+
+  <p>
+    Ultimately, integrating the Measurement Matrix as both a <strong>framing and convergence CTMF</strong> enhanced the professionalism and integrity of our design process. It enabled us to translate user needs into measurable goals, then systematically determine which design met those goals. This approach deepened my appreciation for structured engineering tools and reaffirmed the value of planning and analysis in design convergence.
+  </p>
+
+  <p><em>Effectiveness:</em> The Measurement Matrix was a highly effective CTMF in our design process, offering structured comparison, traceability of decision-making, and a clear link between user needs and final outcomes.</p>
+</div>
 </div>
 
 
