--- a/website.html
+++ b/website.html
@@ -260,10 +260,19 @@
 
   <div id="praxis1" class="tab-content">
   <div class="section-container fade-section">
-    <p>
-      The <strong>Splartz</strong> is a dynamic chair-stabilization platform developed to eliminate wobbling caused by uneven leg lengths in study environments. Designed specifically for square-legged chairs, the device utilizes an internal elastic air chamber that adjusts to user weight, providing automatic compensation for leg height discrepancies between 1.25 mm and 12 mm. With a compact form and a 150 kg capacity, Splartz supports both functionality and portability. The team applied structured decision-making tools (e.g., Pugh charts, measurement matrices) to evaluate design alternatives, ultimately selecting the air-pump concept for its adaptability, simplicity, and alignment with safety standards. Key design enhancements include reduced platform height for stability, a square base for chair compatibility, and a gyroid infill structure that offers near-isotropic strength while minimizing material use. The final prototype achieved a 98% correction accuracy rate in testing, reflecting the team’s emphasis on user comfort, safety, and real-world applicability.
-    </p>
-    
+  <h2>Splartz: Air Pump Chair Stabilizer</h2>
+
+  <p>
+    The <strong>Splartz</strong> is a dynamic chair-stabilization platform designed to eliminate chair wobbling caused by uneven leg lengths, a common issue in student study environments. Aimed at enhancing comfort and usability in public academic spaces, Splartz targets square-legged chairs and incorporates an elastic air chamber that automatically adjusts to compensate for discrepancies between 1.25 mm and 12 mm. This passive adjustment system ensures that the platform dynamically conforms to uneven surfaces based on the user's weight distribution, delivering immediate and intuitive stabilization without requiring fixed installation or manual calibration.
+  </p>
+
+  <p>
+    From a design standpoint, Splartz balances portability with robust performance. It supports weights up to <strong>150 kg</strong>, making it suitable for a wide range of users and furniture types. A key feature of the design is the use of a <strong>gyroid infill structure</strong>, chosen for its near-isotropic strength properties and superior material efficiency. This internal structure reduces material use while maintaining strength under load, optimizing the product for both cost-effective production and environmental sustainability. The form factor was also minimized by reducing platform height, which helped lower the center of gravity and enhanced overall stability. Safety was another critical focus; Splartz integrates <strong>rounded edges and recessed interfaces</strong> in compliance with NSPIRE safety standards, eliminating puncture or snag risks for users.
+  </p>
+
+  <p>
+    The final concept was selected through rigorous evaluation using structured decision-making frameworks such as <strong>Pugh charts</strong> and <strong>measurement matrices</strong>, which helped the team converge on the air pump platform from among several competing designs. These tools allowed the team to analyze alternatives against core criteria including weight support, usability, safety, and correction accuracy. Splartz ultimately demonstrated a <strong>98% success rate in leveling performance tests</strong>, affirming the effectiveness of the selected concept. Through a design process rooted in empirical testing, iterative development, and thoughtful prioritization of user needs, the team produced a solution that is not only technically sound but also practical and accessible for deployment in real-world academic settings.
+  </p>    
     <div class="image-row">
       <img src="Praxis1Pager1.png" alt="Praxis 1 Page 1" />
       <img src="Praxis1Pager2.png" alt="Praxis 1 Page 2" />
