--- a/website.html
+++ b/website.html
@@ -384,6 +384,9 @@
 
   <p><em>Effectiveness:</em> The Measurement Matrix was a highly effective CTMF in our design process, offering structured comparison, traceability of decision-making, and a clear link between user needs and final outcomes.</p>
 </div>
+<div class="section-container fade-section">
+  <h2>Final Takeaways</h2>
+</div>
 </div>
 
   <div id="civ102" class="tab-content">
