--- a/website.html
+++ b/website.html
@@ -457,9 +457,21 @@
 </div>
 
 <div class="section-container fade-section">
-  <h2>CTMF 3</h2>
-  <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
+  <h2>Final Takeaways</h2>
+
+  <p>
+    Praxis I fundamentally reshaped my understanding of engineering design by showing me that the process is far more than just building to meet technical function. Through our framing CTMF—using the <strong>NSPIRE safety standard</strong>—I realized that design begins by understanding the <em>people</em> and <em>contexts</em> our solutions serve. What once seemed like rigid constraints quickly became opportunities to align engineering goals with user well-being. Framing safety not just as a requirement, but as an integral part of the problem space, helped me recognize that good engineering must account for human needs from the outset—not as an afterthought.
+  </p>
+
+  <p>
+    As we moved into ideation, the <strong>Lotus Method</strong> expanded my perception of collaboration and creativity. Diverging using this method taught me that innovation emerges when diverse perspectives are brought into a structured environment. I used to think of ideation as a solo activity—brainstorming in a vacuum—but Praxis I showed me that <em>designing with a team</em> often leads to stronger, more versatile solutions. Seeing how our ideas evolved from individual insights into a well-rounded, multi-faceted concept highlighted the importance of shared creativity in the early phases of design.
+  </p>
+
+  <p>
+    Finally, our use of a <strong>Measurement Matrix</strong> to converge on a final concept showed me how critical objectivity and evaluation are in reaching design decisions. I’ve learned that effective engineering doesn’t rely solely on intuition or popularity—it’s driven by evidence, clear criteria, and iterative reflection. This systematic approach helped us choose the most balanced and realistic solution, reinforcing the importance of traceability in the design process. Altogether, Praxis I taught me to view engineering design as a thoughtful, user-centered, and team-driven practice grounded in ethical responsibility, critical thinking, and structured decision-making.
+  </p>
 </div>
+
 </div>
 
 
