--- a/website.html
+++ b/website.html
@@ -444,9 +444,45 @@
   </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 3</h2>
-    <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
-  </div>
+  <h2>CTMF 3: Converging with Pugh Charts</h2>
+
+  <p>
+    In our Praxis II project, we used the <strong>Pugh Chart method</strong> (Figures 1–4) to guide the convergence phase and evaluate design alternatives with consistent, data-informed judgment. After generating a wide range of solutions during the divergent phase—including the Colour Scanner, Villi Probe, Sponge, and Claw—we needed a systematic method to compare them based on functional requirements like accuracy, number of steps, quantitative output, and corrosion resistance. The Pugh Chart provided a structured framework to organize this analysis, making it easier to draw meaningful comparisons across design options.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="pugh1.png" alt="Pugh Chart using Colour Scanner as reference" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 1 – Pugh Chart with Colour Scanner as the reference design</figcaption>
+  </figure>
+
+  <p>
+    The most effective Pugh Chart used the <strong>Colour Scanner as the reference</strong> (Figure 1), since it was our baseline idea and had already been used in previous tests. This reference allowed us to objectively identify the advantages and drawbacks of each competing design. The chart revealed that the Colour Scanner consistently outperformed other options in areas like accuracy, minimal user steps, quantitative feedback, and corrosion durability. It became clear that, despite being a complex tool, it provided a reliable, portable, and scientifically robust way to collect soil data, especially when combined with improved scanning strategies.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="pugh2.png" alt="Pugh Chart using Claw as reference" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 2 – Pugh Chart with Claw as the reference design</figcaption>
+  </figure>
+
+  <figure style="text-align: center;">
+    <img src="pugh3.png" alt="Pugh Chart using Sponge as reference" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 3 – Pugh Chart with Sponge as the reference design</figcaption>
+  </figure>
+
+  <figure style="text-align: center;">
+    <img src="pugh4.png" alt="Pugh Chart using Villi Probe as reference" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">Figure 4 – Pugh Chart with Villi Probe as the reference design</figcaption>
+  </figure>
+
+  <p>
+    The Pugh method was especially helpful during <strong>framing</strong> because it forced us to articulate and weight our evaluation criteria early in the process. We had to determine what attributes actually mattered in the context of field-based soil analysis: accuracy, user simplicity, corrosion resilience, and quantitative capability. This helped prevent us from selecting a design based on aesthetic appeal or subjective team preference. Instead, the Pugh Chart clarified which performance traits we prioritized and helped us frame our final selection accordingly.
+  </p>
+
+  <p>
+    Evaluating the effectiveness of this CTMF, it is clear that the Pugh Chart method provided an accessible yet powerful tool for converging toward the best design option. It balanced qualitative judgment with quantitative rationale, encouraged critical discussion, and offered a visual summary that all team members could easily interpret. In the future, I would absolutely use this CTMF again—especially in group settings—because it keeps ideation grounded while still enabling consensus. Overall, this approach deepened my appreciation for convergence as a structured, evidence-based process rather than an arbitrary decision point.
+  </p>
+</div>
+
 </div>
 
 <div id="Resources" class="tab-content">
