--- a/website.html
+++ b/website.html
@@ -426,7 +426,19 @@
 
 <div id="praxis2" class="tab-content">
   <div class="section-container fade-section">
-    <h2>One Pager</h2>
+  <h2>Design Summary: Bonsai Bloom</h2>
+
+  <p>
+    <strong>Bonsai Bloom</strong> is a mobile application that quantifies soil moisture for Juniper bonsai trees by analyzing the color intensity of the soil surface through a smartphone camera. The app converts soil color to a hexadecimal code, compares it to an ideal "moisture" reference, and outputs a percentage indicating how wet or dry the soil is. This system is designed to help beginners care for bonsai trees by offering a simple, non-invasive method of moisture measurement that avoids disturbing the soil or roots.
+  </p>
+
+  <p>
+    The design emphasizes <strong>accuracy, usability, and safety</strong>. By using RGB Euclidean distance between the current and ideal hex codes, Bonsai Bloom determines moisture with surprising effectiveness. The app features editable notes, pixel logs, and time-stamped entries to allow users to track changes over time. Experimental data confirmed the validity of the system: water loss in the soil followed a logarithmic trend with a strong correlation (R² = 0.924), and an inverted RGB intensity ratio also showed a high correlation with moisture over time (R² = 0.981).
+  </p>
+
+  <p>
+    Going forward, potential improvements include adding a light source for consistent imaging, excluding root interference in readings, and extending functionality to other plant types. The simplicity and accessibility of the app demonstrate its strong alignment with the design brief—allowing beginner bonsai caretakers to monitor and adjust watering routines confidently while preserving soil structure. Ultimately, Bonsai Bloom combines practical image analysis and intuitive design to create an effective, user-friendly tool for plant care.
+  </p>
     <div class="image-row">
       <img src="Praxis2Pager1.png" alt="Praxis 2 Page 1" />
       <img src="Praxis2Pager2.png" alt="Praxis 2 Page 2" />
