--- a/website.html
+++ b/website.html
@@ -446,9 +446,42 @@
   </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 1</h2>
-    <p>Explain your first application of the CTMF model and how you began to navigate the design cycle.</p>
-  </div>
+  <h2>CTMF 1: Diverging Through Classical Brainstorming</h2>
+
+  <p>
+    At the beginning of our bridge design process, our team engaged in <strong>classical brainstorming</strong> to generate a wide range of structural concepts before committing to a single design. Each team member contributed ideas individually, which we then shared openly to spark discussion and cross-pollination of insights. This method proved especially valuable in the early stages of the project when we needed to explore diverse approaches to meet the strength, stability, and weight constraints of the CIV102 Bridge Competition. The unfiltered nature of classical brainstorming encouraged creative freedom and allowed even unconventional ideas to be voiced without judgment.
+  </p>
+
+  <p>
+    As a result of this collaborative ideation, we developed several bridge concepts which we later refined through calculations. Three of the most developed ideas are illustrated in Figures 1–3 below. These included a <strong>double-flanged I-beam design</strong> (Figure 1), a <strong>trapezoidal box-beam with multiple reinforcement levels</strong> (Figure 2), and an <strong>enhanced trapezoidal profile with four reinforcement axes</strong> (Figure 3). Once we had these initial ideas, we were able to evaluate each in terms of its moment of inertia, expected failure mode, and material usage. This mathematical validation process helped us see the tradeoffs between simplicity, manufacturability, and load-bearing performance.
+  </p>
+
+  <p>
+    This CTMF was <strong>highly effective</strong> for the divergence phase of our bridge design. Classical brainstorming helped us create a broad solution space, from which we could later narrow down based on structural performance. Importantly, the act of sketching and discussing ideas visually accelerated our ability to convert concepts into analyzable models. Instead of defaulting to obvious beam shapes, we were able to iterate creatively and rigorously. Our team’s brainstorming session provided the foundation for everything that followed — it helped frame our understanding of the design possibilities and sparked the comparative calculations that drove us forward.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="design1.png" alt="Figure 1 - Double-flanged I-beam Concept" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 1:</strong> Early concept using a symmetrical I-beam shape to provide a high moment of inertia.
+    </figcaption>
+  </figure>
+
+  <figure style="text-align: center;">
+    <img src="design2.png" alt="Figure 2 - Trapezoidal Box Beam with 3 Reinforcement Axes" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 2:</strong> An asymmetric trapezoidal concept with three distinct reinforcement levels above the neutral axis.
+    </figcaption>
+  </figure>
+
+  <figure style="text-align: center;">
+    <img src="design3.png" alt="Figure 3 - Reinforced Trapezoidal Bridge with 4 Axes" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 3:</strong> Optimized version of the trapezoidal beam with four reinforcement lines to increase stiffness.
+    </figcaption>
+  </figure>
+</div>
+
 
   <div class="section-container fade-section">
     <h2>CTMF 2</h2>
