--- a/website.html
+++ b/website.html
@@ -443,9 +443,52 @@
 </div>
 
   <div class="section-container fade-section">
-    <h2>CTMF 2</h2>
-    <p>Discuss how your understanding evolved and how iteration improved your approach.</p>
-  </div>
+  <h2>CTMF 2: Converging Using a Measurement Matrix</h2>
+
+  <p>
+    As our team moved from ideation to analysis, we adopted a <strong>measurement matrix</strong> to guide our convergence process. Having brainstormed and modeled multiple structural configurations, including Design 0, Design 1, and the final candidate, we needed an effective CTMF to help us evaluate which design best satisfied our performance goals. The measurement matrix (Figure 4) allowed us to compare each design option across multiple <strong>factors of safety (FOS)</strong>, including tension, compression, shear, glue, and buckling in various forms. These values were obtained using structural calculations for each concept.
+  </p>
+
+  <p>
+    For example, Design 0 (Figure 1) revealed a critical weakness in <strong>buckling resistance</strong>, falling below the acceptable FOS threshold of 1.0. This immediately signaled structural instability and made it a less viable candidate. In contrast, Design 1 (Figure 2) offered significantly better performance in buckling and tension but showed limitations in glue and overall consistency. 
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="design0_output.png" alt="Figure 1 - Factor of Safety for Design 0" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 1:</strong> Calculated safety factors for initial bridge concept (Design 0).
+    </figcaption>
+  </figure>
+
+  <figure style="text-align: center;">
+    <img src="design1_output.png" alt="Figure 2 - Factor of Safety for Design 1" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 2:</strong> Intermediate design evaluated prior to final selection.
+    </figcaption>
+  </figure>
+
+  <p>
+    Ultimately, the <strong>final design</strong> (Figure 3) emerged as the most robust option, demonstrating consistent safety margins across all FOS categories. Notably, it had one of the highest FOSbuck123 values, showcasing superior structural stability under compressive and buckling stress. While the matrix alone did not dictate our decision, it <em>strongly influenced</em> our reasoning by pointing us toward the most balanced configuration. The visual clarity of the matrix (Figure 4) helped our team discuss and weigh the trade-offs in a transparent, structured format.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="final_output.png" alt="Figure 3 - Factor of Safety for Final Design" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 3:</strong> Final bridge design demonstrating superior performance in key metrics.
+    </figcaption>
+  </figure>
+
+  <figure style="text-align: center;">
+    <img src="measurement_matrix.png" alt="Figure 4 - Measurement Matrix Comparing All Designs" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 4:</strong> Comparison matrix that informed final design convergence.
+    </figcaption>
+  </figure>
+
+  <p>
+    Using this CTMF not only facilitated convergence but also deepened our understanding of how comparative analysis strengthens engineering judgment. It allowed us to validate qualitative design ideas through quantitative evidence and uncover flaws that may have otherwise gone unnoticed. The matrix also helped us facilitate team discussion, enabling each member to weigh trade-offs transparently. This was especially useful when some metrics were strong in one design but weak in others, which led to meaningful conversations about what we value in structural integrity. Ultimately, the process emphasized the importance of <strong>structured evaluation</strong> over intuition, ensuring we chose a design supported by clear evidence and robust metrics.
+  </p>
+</div>
   <div class="section-container fade-section">
     <h2>CTMF 3</h2>
     <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
