--- a/website.html
+++ b/website.html
@@ -472,7 +472,7 @@
   </p>
 
   <figure style="text-align: center;">
-    <img src="final_output.png" alt="Figure 3 - Factor of Safety for Final Design" style="max-width: 100%; height: auto;" />
+    <img src="finaldesign_output.png" alt="Figure 3 - Factor of Safety for Final Design" style="max-width: 100%; height: auto;" />
     <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
       <strong>Figure 3:</strong> Final bridge design demonstrating superior performance in key metrics.
     </figcaption>
