--- a/website.html
+++ b/website.html
@@ -490,9 +490,62 @@
   </p>
 </div>
   <div class="section-container fade-section">
-    <h2>CTMF 3</h2>
-    <p>Final reflections on the project, and how your work aligned with user needs and technical constraints.</p>
-  </div>
+  <h2>CTMF 3: Prototyping</h2>
+
+  <p>
+    Our team’s prototyping process for the <strong>CIV102 Bridge Project</strong> spanned three key stages: a hand-drawn technical sketch, a Blender 3D model, and the final physical construction. This sequence of prototyping methods helped us deeply understand the dimensions, spatial structure, and practical assembly techniques required for a successful bridge. Beginning with the technical drawing (Figure 1), we planned each element of our design including member thicknesses, cross-sectional geometry, and precise spacing for reinforcements and diaphragms. This phase helped align our team on a shared geometric and dimensional understanding.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="final_sketch.png" alt="Figure 1 - Technical Drawing of Final Bridge Design" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 1:</strong> Final hand-drawn sketch outlining exact bridge layout, reinforcements, and member dimensions.
+    </figcaption>
+  </figure>
+
+  <p>
+    We then moved to a Blender 3D model (Figure 2), which enabled us to visualize the bridge in three dimensions. Unlike the drawing, this model allowed us to assess volume, thickness consistency, and the interrelation between members in a more dynamic environment. During this step, we caught errors in the internal spacing and quickly resolved them before physical cutting began. Blender also helped us simulate the layering of sheets and test spacing for adhesives and reinforcements. This second prototyping phase was crucial in identifying gaps between theoretical plans and practical feasibility.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="blender_bridge.png" alt="Figure 2 - Blender 3D Model of Bridge" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 2:</strong> Blender model used to visualize 3D assembly, spacing, and layering of structural components.
+    </figcaption>
+  </figure>
+
+  <p>
+    Finally, we transitioned to the physical prototype (Figure 3). This step involved implementing our design using real materials, adhesives, and measurement tools. Although our plan was well-developed, the construction phase revealed small but critical buildability challenges such as precise cutting tolerance, drying times, and alignment stability. Without the prior two prototypes, these issues could have compromised our structure. By physically prototyping, we ensured our bridge matched the intent of our design brief and could withstand required loads.
+  </p>
+
+  <figure style="text-align: center;">
+    <img src="real_bridge.png" alt="Figure 3 - Final Built Bridge" style="max-width: 100%; height: auto;" />
+    <figcaption style="margin-top: 0.5rem; font-size: 0.9rem; color: #555;">
+      <strong>Figure 3:</strong> Final constructed bridge, integrating learnings from both drawing and 3D modeling prototypes.
+    </figcaption>
+  </figure>
+
+  <p>
+    This iterative prototyping approach exemplified the value of the <strong>Represent</strong> phase of the engineering design cycle. Each prototype stage gave us insights that directly informed the next, culminating in a structure that not only satisfied our performance goals, but also aligned with practical constraints. The process emphasized the importance of visualization and iterative refinement, reinforcing how design representation drives buildability.
+  </p>
+</div>
+
+<div class="section-container fade-section">
+  <h2>Final Takeaways</h2>
+
+  <p>
+    Reflecting on the full design cycle for the CIV102 bridge project, I have come to better appreciate the structure and rigor of the engineering design process. Tools like classical brainstorming, measurement matrices, and iterative prototyping gave our team a way to convert raw creativity into tested, validated ideas. The process didn’t just help us choose a final design — it taught me how different CTMFs serve unique and necessary roles across the Frame–Diverge–Converge–Represent spectrum.
+  </p>
+
+  <p>
+    Initially, I underestimated the importance of divergence and ideation. I often jumped to the "best idea" early on. However, after seeing how structured brainstorming led to designs we wouldn’t have otherwise considered, I recognized how critical this early phase is for uncovering innovation. Likewise, the convergence process using quantitative evidence showed me how to make more defensible design decisions — not based on intuition or convenience, but on real performance metrics.
+  </p>
+
+  <p>
+    Finally, building and prototyping the bridge gave me a deep sense of respect for the link between design intent and physical reality. Even the most elegant plan needs iteration and testing before it becomes a reliable, tangible solution. Through this experience, I now see engineering design as more than technical execution — it’s an iterative, human-centered discipline rooted in thoughtful tradeoffs, teamwork, and reflective learning.
+  </p>
+</div>
+
   
 </div>
 
